--- a/Android/BooYa/res/layout/main.xml
+++ b/Android/BooYa/res/layout/main.xml
@@ -3,14 +3,9 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    android:id="@+id/textView1"/>
-<Button android:layout_height="wrap_content" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_below="@+id/textView1" android:layout_centerHorizontal="true" android:layout_marginTop="52dp" android:text="@string/booya_da_people"></Button>
-<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/button1" android:layout_centerHorizontal="true" android:layout_marginTop="29dp" android:text="@string/booya_board" android:id="@+id/booYaBoardBtn"></Button>
-<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_centerVertical="true" android:layout_centerHorizontal="true" android:text="@string/stuff" android:id="@+id/stuffBtn"></Button>
-<Button android:text="@string/stats" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/stuffBtn" android:layout_alignLeft="@+id/stuffBtn" android:layout_marginTop="26dp" android:id="@+id/statsBtn"></Button>
+    android:background="@drawable/root_bg">
+<Button android:layout_height="wrap_content" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_below="@+id/textView1" android:layout_alignParentTop="true" android:layout_marginTop="14dp" android:background="@drawable/root_booyadapeople"></Button>
+<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/button1" android:id="@+id/booYaBoardBtn" android:layout_centerHorizontal="false" android:layout_alignParentTop="true" android:layout_marginTop="107dp" android:background="@drawable/root_booyaboard"></Button>
+<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/stuffBtn" android:background="@drawable/root_stuff" android:layout_centerHorizontal="false" android:layout_centerVertical="false" android:layout_alignParentTop="true" android:layout_marginTop="260dp"></Button>
+<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/statsBtn" android:background="@drawable/root_me_myself" android:layout_alignParentTop="true" android:layout_marginTop="185dp"></Button>
 </RelativeLayout>
